css/style.css
* {
  box-sizing: border-box;
}

:root {
  --default-font: Poppins;
  --default-color: rgb(199, 199, 199);
  --line-color: rgb(107, 22, 22);
}

body {
  margin: 0;
  padding: 0;
  font-family: var(--default-font);
  line-height: 1.5;
  background-color: var(--default-color)
}

h1, h2, h3 {
  margin: 0;
}

p {
  margin: 0;
  padding: 5px;
}

a {
  color: black;
  text-decoration: none;
  cursor: pointer;
  transition: 0.5s;
}

a:hover, a:active {
  font-size: 150%;
  font-weight: 600;
  color: var(--line-color);
}

header {
  display: flex;
  flex-direction: row;
  margin: 0px 5%;
  justify-content: space-between;
  align-items: center;
  height: 100px;
}

#name {
  display: flex;
  font-size: 25px;
  width: 50%;
  font-weight: 350px;
}

#navbar {
  display: flex;
  width: 35%;
  align-items: center;
  justify-content: space-between;
}

.hero {
  display: flex;
  height: 200px;
  background-size: cover;
  justify-content: right;
  background-image: url("../images/background-image.jpg");
  background-repeat: no-repeat;
}

.hero h2 {
  padding-top: 150px;
  padding-right: 55px;
  color: white;
}

#content {
  margin: 0px 5%;
  display: grid;
  grid-template-rows: auto auto auto 1fr auto;
  grid-template-columns: 135px 1fr 1fr;
  grid-template-areas:
  "about-title about-text about-text"
  "work-title work-1 work-1"
  "work-title work-2 work-3"
  "work-title work-4 work-5"
  "contact-title contact-details contact-details";
}

.content-title {
  font-weight: 800;
  padding: 5px;
  border-right: 2px solid var(--line-color);
}

.heading {
  background-color: rgba(0, 0, 0, 0.7) ;
  height: 30px;
  color: white;
  position: relative;
  font-size: 15px;
  border-bottom: 5px solid var(--line-color);
}

.photo {
  width: 100px;
  height: auto;
  border-radius: 50%;
}

#about-title {
  grid-area: about-title;
  margin-bottom: 15px;
  margin-top: 15px;
}

#about-text {
  grid-area: about-text;
  margin-left: 25px;
  margin-top: 15px;
}

#work-title {
  grid-area: work-title;
  margin-top: 15px;
}

.work-grid {
  margin-top: 15px;
  background-position: top;
  background-size: cover;
  background-repeat: no-repeat;
  display: grid;
  align-content: end;
  cursor: pointer;
  transition: transform 0.5s ease;
}

#work-1 {
  grid-area: work-1;
  background-image: url(../images/01-horiseon.jpg);
  background-size: cover;
  height: 150px;
  margin-left: 25px;
  margin-bottom: 15px;
}

#work-2 {
  grid-area: work-2;
  background-image: url("../images/02-portfolio-2.jpg");
  background-size: cover;
  height: 150px;
  margin-left: 25px;
  margin-bottom: 15px;
}

#work-3 {
  grid-area: work-3;
  background-image: url("../images/02-portfolio-3.jpg");
  height: 150px;
  margin-left: 25px;
  margin-bottom: 15px;
}

#work-4 {
  grid-area: work-4;
  background-image: url("../images/02-portfolio-4.jpg");
  height: 150px;
  margin-left: 25px;
}

#work-5 {
  grid-area: work-5;
  background-image: url("../images/02-run-buddy.jpg");
  height: 150px;
  margin-left: 25px;
}

#work-1:hover, #work-2:hover, #work-3:hover, #work-4:hover, #work-5:hover {
  transform: scale(1.1);
}

#contact-title {
  grid-area: contact-title;
  margin-top: 15px;
}

.contact-details {
  grid-area: contact-details;
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  margin-left: 25px;
  margin-top: 15px;
  padding: 5px;
  flex-wrap: wrap;
}

footer {
  padding: 30px;
  clear: both;
  font-family: var(--default-font);
  text-align: center;
}

footer h4 {
  font-weight: 100;
  font-size: 13px;
}

@media only screen and (max-width: 600px) {
  header {
    flex-direction: column;
    height: 75px;
  }

  #name {
    font-size: 20px;
    padding-top: 10px;
    justify-content: center;
  }

  h2 {
    font-size: 18px;
  }

  #navbar {
    justify-content: space-between;
    width: 75%;
    padding-bottom: 10px;
  }

  #content {
    grid-template-columns: 110px 1fr 1fr;
  }

  p {
    font-size: 12px;
  }

  .heading {
    font-size: 12px;
    bottom: 0;
    height: 43px;
  }

  .content-title {
    font-size: 15px;
  }
}

